PDF New change 2004